# ocr

./: Dockerfile  compose.yml  main.py  pyproject.toml
